Создание проектов теперь происходит через апдейт Категории, а создать тег можно при апдейте Ивента
- Удалён метод создания проекта в CategoryProjectController
- Обновлён метод setProjects в Category для корректного управления проектами
- Изменён каскадный тип в связи с проектами на CascadeType.ALL и добавлено orphanRemoval
- Обновлён CategoryServiceImpl для работы с новыми проектами
- Добавлен новый enum ProjectUpdateMode для управления обновлением проектов
- Обновлён DTO CategoryUpdateDto для поддержки новых полей
- Изменены типы коллекций в Tag и Event на List
