# src/main/java/ru/practicum/eventhub/api/dto/request/CategoryUpdateDto.java
@@ -1,6 +1,9 @@
 package ru.practicum.eventhub.api.dto.request;
 
 import jakarta.validation.constraints.Size;
+import ru.practicum.eventhub.domain.model.ProjectUpdateMode;
+
+import java.util.Set;
 
 public record CategoryUpdateDto(
 
@@ -8,6 +11,18 @@ public record CategoryUpdateDto(
         String name,
 
         @Size(max = 255, message = "Описание должно быть до 255 символов")
-        String description
+        String description,
+
+        Set<ProjectCreateDto> projects,
+        ProjectUpdateMode updateMode
 ) {
+    public CategoryUpdateDto {
+        if (projects == null) {
+            projects = Set.of();
+        }
+
+        if (updateMode == null) {
+            updateMode = ProjectUpdateMode.ADD;
+        }
+    }
 }
